Refatoracao aplicando os conceitos de SOLID - 12/10