@@ -23,12 +23,17 @@ java {
     targetCompatibility = JavaVersion.VERSION_21
 }
 
+tasks.withType(Test).configureEach {
+    jvmArgs '-XX:+EnableDynamicAgentLoading'
+}
+
 dependencies {
     implementation 'org.apache.groovy:groovy:4.0.22'
     implementation 'org.postgresql:postgresql:42.7.2'
-    testImplementation 'org.spockframework:spock-core:2.3-groovy-4.0'
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'com.h2database:h2:2.2.220'
+    testImplementation 'org.mockito:mockito-core:5.3.1'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.3.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
 }
 
 test {
